--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
+<meta name="google-site-verification" content="1hHtKOQ146dK4qAUPboUodwHWVt5NU6n2UJFcX0fIMk" />
 
 
 <!-- Google SEO -->
@@ -453,3 +454,4 @@ if (data.status === "success") {
 
 </body>
 </html>
+
